refactor(toolbar): 重构工具栏实现响应式自动换行布局
- 修改AppState初始化透明度从0.8f改为0.0f
- 重写ControlPanel渲染逻辑，实现响应式自动换行布局算法
- 添加calculateRows方法计算动态行布局
- 优化ControlSlidersGroup支持单行和双行自适应显示
- 更新滑动条尺寸配置，宽度从230f调整为200f，高度从19f调整为26f
- 修复OffsetHandler中使用新的LinkedList方法替代索引访问
- 修改ToolPanel响应式列数计算，支持无限制列数配置
- 更新ToolPanelConfig最大列数为0表示不限制自动计算